<resources>
    <string name="app_name">Logica</string>
    <string name="conjunction_and">Conjunction(AND)</string>
    <string name="a">A</string>
    <string name="t">T</string>
    <string name="name">Name</string>
    <string name="submit">Submit</string>
    <string name="a_b">A^B</string>
    <string name="f">F</string>
    <string name="b">B</string>
    <string name="correct">Correct</string>
    <string name="incorrect">Incorrect</string>

</resources>
